<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="com.base111.basis.MathQuiz">

    <TextView
        android:id="@+id/questionCount"
        android:layout_marginTop="13dp"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionCount"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/mathQ1"
        android:layout_below="@+id/questionCount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mathQ1"
        android:textColor="#000"
        android:textSize="36sp"/>
    <RadioGroup
        android:id="@+id/rdQ1"
        android:layout_marginTop="13dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mathQ1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/mathQ1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathQ1a"
            android:onClick="Q1"/>
        <RadioButton
            android:id="@+id/mathQ1b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathQ1b"
            android:onClick="Q1"/>
        <RadioButton
            android:id="@+id/mathQ1c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathQ1c"
            android:onClick="Q1"/>
    </RadioGroup>

    <Button
        android:id="@+id/next"
        android:background="@color/basic"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/rdQ1"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mathQ1Next"
        android:textColor="@color/basicText"
        android:onClick="Q2"/>
    <TextView
        android:id="@+id/questionScore"
        android:padding="9dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/next"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/questionScore"
        android:textColor="#000"
        android:textSize="18sp"/>

</RelativeLayout>
