<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.base111.basis.MainActivity">

    <ImageView
        android:id="@+id/basislogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/basis_logo"
        android:layout_marginTop="13dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/apptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/basislogo"
        android:text="@string/app_name"
        style="@style/CustomFontStyle"/>
    <TextView
        android:id="@+id/app_para"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/apptitle"
        android:text="@string/app_para"/>
    <Button
        android:id="@+id/basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/app_para"
        android:text="@string/basic"
        android:onClick="launchBasic"/>
    <Button
        android:id="@+id/advance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/basic"
        android:text="@string/advance"
        android:onClick="launchAdvance"/>
</RelativeLayout>
